src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Allergies__c</fullName>
        <inlineHelpText>Does your child have any dietary restrictions or food allergies (vegetarian, vegan, dairy, gluten, nuts, kosher, Halal, seafood, no pork products, etc.)? If Yes, please explain. If No, please check the box below.</inlineHelpText>
        <label>Allergies / Food Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Name__c</fullName>
        <inlineHelpText>Emergency Contact Name</inlineHelpText>
        <label>Emergency Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <inlineHelpText>Emergency Contact&apos;s Phone</inlineHelpText>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Relationship__c</fullName>
        <inlineHelpText>Emergency Contact&apos;s Relationship to Child</inlineHelpText>
        <label>Emergency Contact Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 1 Name</inlineHelpText>
        <label>Authorized Pickup 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 1&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_1_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 1&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 1 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 2 Name</inlineHelpText>
        <label>Authorized Pickup 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 2&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_2_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 2&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 2 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Name__c</fullName>
        <inlineHelpText>Authorized Pickup 3 Name</inlineHelpText>
        <label>Authorized Pickup 3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Phone__c</fullName>
        <inlineHelpText>Authorized Pickup 3&apos;s Phone #</inlineHelpText>
        <label>Authorized Pickup 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_3_Relationship__c</fullName>
        <inlineHelpText>Authorized Pickup 3&apos;s Relationship to Child</inlineHelpText>
        <label>Authorized Pickup 3 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Name__c</fullName>
        <inlineHelpText>Second Emergency Contact&apos;s Name</inlineHelpText>
        <label>Emergency Contact 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Phone__c</fullName>
        <inlineHelpText>Emergency Contact 2&apos;s Phone</inlineHelpText>
        <label>Emergency Contact 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Relationship__c</fullName>
        <inlineHelpText>Emergency Contact 2&apos;s Relationship to Child</inlineHelpText>
        <label>Emergency Contact 2 Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Preferred_Medical_Provider__c</fullName>
        <label>Emergency Preferred Medical Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <inlineHelpText>Please select any terms that apply to your family.</inlineHelpText>
        <label>Family Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refugee</fullName>
                </value>
                <value>
                    <fullName>Immigrant</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <inlineHelpText>Grade in 2018-19 school year: 
4th- 2027
5th- 2026
6th- 2025 
7th- 2024 
8th- 2023 
9th- 2022
10th-2021 
11th-2020 
12th-2019</inlineHelpText>
        <label>High School Graduation Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <inlineHelpText>Please choose your annual household income range:</inlineHelpText>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $20,000</fullName>
                </value>
                <value>
                    <fullName>$20,000-$39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000-$59,999</fullName>
                </value>
                <value>
                    <fullName>$60,000-$79,999</fullName>
                </value>
                <value>
                    <fullName>Over $80,000</fullName>
                </value>
                <value>
                    <fullName>Decline to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <inlineHelpText>Does your child have any health condition(s) that Techbridge Girls should be aware of? If Yes, please explain. If No, please check the box below.</inlineHelpText>
        <label>Medication / Health Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Special_Needs__c</fullName>
        <inlineHelpText>Is there anything else you would like Techbridge Girls to know about your child? (IEP, ADHD, sensory integration needs, dyslexic, emotional needs, mobility restrictions, etc.)?</inlineHelpText>
        <label>Student Special Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Transportation__c</fullName>
        <inlineHelpText>Please choose one option regarding your child’s transportation home after Techbridge Girls program ends:</inlineHelpText>
        <label>Student Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>May walk/bus home</fullName>
                </value>
                <value>
                    <fullName>Will receive a ride</fullName>
                    <label>Someone will pick up my child</label>
                </value>
                <value>
                    <fullName>My child can go to the after school program at the school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation_Needed_Other__c</fullName>
        <inlineHelpText>Other Language:</inlineHelpText>
        <label>Translation Needed: Other</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Needed__c</fullName>
        <inlineHelpText>If you would like materials translated, please indicate the language:</inlineHelpText>
        <label>Translation Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do not need translation</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Somali</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>